# PCT

./: .gitignore  README.md
Lab_1/: Data_analysis.nb  LU-разложеник в wolfram.nb  LU_decomposition_2  alt_ver.cpp  alt_ver_2.cpp  main.cpp  output_data_block_1024.txt  output_data_traditional_1024.txt  Табличка результатов.xlsx
Lab_1/res1/: output_data_block_1024.txt  output_data_block_2048.txt  output_data_block_4096.txt  output_data_traditional_1024.txt  output_data_traditional_2048.txt  output_data_traditional_4096.txt
Lab_1/res1/res2_true/: output_data_traditional_8192.txt
Lab_1/res2/: output_data_block_4096.txt  output_data_block_8192.txt  output_data_traditional_4096.txt
Lab_1/res3/: output_data_block_4096.txt  output_data_block_8192.txt  output_data_traditional_8192.txt
Lab_2/: CMakeLists.txt  Data_analysis.nb  Helmholtz_Solver.cpp  Helmholtz_Solver.h  input.txt  main.cpp
Lab_2/other_version/: input.txt  main_all.cpp  output_method_1.txt  output_method_2.txt
Lab_2/output/: output_method_1.txt  output_method_2.txt
Lab_3/: CMakeLists.txt  Helmholtz_Solver.cpp  Helmholtz_Solver.h  RESULT_MJ_ISEND.txt  RESULT_MZ_ISEND.txt  main1.cpp
Lab_3/INPUT/: input_parametres_1.json
Lab_3/Manuals/other_ver/: main_ver2.cpp
Lab_3/OUTPUT/: result1.txt  result2.txt  result3.txt
Lab_3/PROGRAMM/: CMakeLists.txt  main.cpp
Lab_3/PROGRAMM/include/: Helmholtz_Solver.h
Lab_3/PROGRAMM/include/json/: jsoncpp.cpp
Lab_3/PROGRAMM/src/: Helmholtz_Solver_MPI.cpp  Helmholtz_Solver_OMP.cpp  functions.cpp
Lab_3/PROGRAMM/tests/: test_mpi.cpp  test_omp.cpp
Lab_4/: main.cpp
Lab_4/INPUT/: 1000_body_3.txt  64k_body_1.txt  genbody.py  input.json
Lab_4/Manuals/: main_old_ver.cpp  Задача N тел.docx
Lab_4/OUTPUT/test1/: body-(1).txt  body-(2).txt  body-(3).txt  body-(4).txt
Lab_4/PROGRAMM/: CMakeLists.txt  main.cpp
Lab_4/PROGRAMM/include/: N-BodyProblem.h
Lab_4/PROGRAMM/src/: N-BodyProblem_MPI.cpp  functions.cpp
Lab_4/VISUALIZATION/: Tables.nb  VISUALIZATION.nb
Lab_4/VISUALIZATION/for_tables/: 1.txt  2.txt  3.txt  4.txt
Lab_5/INPUT/: 1000_body_1.txt  1000_body_2.txt  64k_body_2.txt  64k_body_3.txt  input.json
Lab_5/Manuals/: Kompilyatsia_Cuda.txt  lab5_text.txt  laba_5_kris.txt
Lab_5/OUTPUT/test1/: RESULT.txt  body-(1).txt  body-(2).txt  body-(3).txt  body-(4).txt
Lab_5/PROGRAMM/: CMakeLists.txt  main.cpp
Lab_5/PROGRAMM/include/: N-body-problem-cuda.cuh
Lab_5/PROGRAMM/src/: cuda-functions.cu  functions.cpp  runge-kutta.cu
Lab_5/VISUALIZATION/: Tables.nb  VISUALIZATION.nb  graphics.nb  proverka.nb
Lab_5/VISUALIZATION/for_tables/: 1.txt  2.txt  3.txt  4.txt  5.txt
